--- a/hn_dark.css
+++ b/hn_dark.css
@@ -1,70 +1,71 @@
-td.title {
-  font-size: medium;
-}
+@-moz-document domain("news.ycombinator.com") {
+  td.title {
+    font-size: medium;
+  }
 
-a,
-a:link,
-.pagetop a,
-.pagetop a:visited {
-  color: #93A1A1;
-}
+  a,
+  a:link,
+  .pagetop a,
+  .pagetop a:visited {
+    color: #93A1A1;
+  }
 
-td.default a,
-td.title a:link,
-span.comment a:link {
-  color: #2aa198;
-}
+  td.default a,
+  td.title a:link,
+  span.comment a:link {
+    color: #2aa198;
+  }
 
-.comment,
-.c00 {
-  color: #93A1A1;
-}
+  .comment,
+  .c00 {
+    color: #93A1A1;
+  }
 
-.pagetop {
-  color: green;
-}
+  .pagetop {
+    color: green;
+  }
 
-font {
-  color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-}
+  font {
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+  }
 
-td.title a:visited,
-span.comment a:visited {
-  color: #b58900;
-}
+  td.title a:visited,
+  span.comment a:visited {
+    color: #b58900;
+  }
 
-yclinks a,
-td.default span.comhead a,
-td.subtext a,
-td.subtext span {
-  color: #93a1a1;
-}
+  yclinks a,
+  td.default span.comhead a,
+  td.subtext a,
+  td.subtext span {
+    color: #93a1a1;
+  }
 
-td.default span.comhead a,
-td.subtext a {
-  font-weight: bold;
-}
+  td.default span.comhead a,
+  td.subtext a {
+    font-weight: bold;
+  }
 
-body > center > table > tbody > tr:first-child > td {
-  background-color: #073642;
-}
+  body > center > table > tbody > tr:first-child > td {
+    background-color: #073642;
+  }
 
-body,
-body > center > table {
-  background-color: #002b36;
-  margin-left: auto;
-  margin-right: auto;
-}
+  body,
+  body > center > table {
+    background-color: #002b36;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-code,
-pre {
-  color: #b58900;
-  background: #073642;
-}
+  code,
+  pre {
+    color: #b58900;
+    background: #073642;
+  }
 
-a:hover {
-  background: #073642;
+  a:hover {
+    background: #073642;
+  }
 }
-
