--- a/hn_dark.css
+++ b/hn_dark.css
@@ -1,4 +1,8 @@
 @-moz-document domain("news.ycombinator.com") {
+  * {
+    font-family: sans-serif !important;
+  }
+
   td.title {
     font-size: medium;
   }
