fix linting in hn_dark

--- a/hn_dark.css
+++ b/hn_dark.css
@@ -11,7 +11,7 @@
   a:link,
   .pagetop a,
   .pagetop a:visited {
-    color: #93A1A1;
+    color: #93a1a1;
   }
 
   td.default a,
@@ -22,7 +22,7 @@
 
   .comment,
   .c00 {
-    color: #93A1A1;
+    color: #93a1a1;
   }
 
   .pagetop {
