--- a/src/Stackoverflow_Dark/sections/10/style.css
+++ b/src/Stackoverflow_Dark/sections/10/style.css
@@ -1,10 +1,29 @@
-/* chat.stackoverflow.com */
-  #hlogo a {
-    background-image: none !important;
+/* nav manu text coloring only */
+  .nav li, .nav li.youarehere a, .nav a, .nav a:hover,
+  #footer .top-footer-links, #footer #footer-sites, .narrow .votes, .narrow .mini-counts,
+  .answered, .answered-accepted {
+    background-color: transparent !important;
+    color: #ddd !important;
   }
-  #header-logo, #footer-logo {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackoverflow-logo.svg) !important;
+  .nav li.youarehere a, .nav li a:hover {
+    color: #4183C4 !important;
   }
-  #header-logo {
-    background-size: contain !important;
+  .answered-accepted .mini-counts span {
+    color: #fff !important;
+  }
+  .about-page .new-about-content-page h2.about-title {
+    color: #888 !important;
+  }
+  body:before {
+    -webkit-filter: brightness(.3) !important;
+    filter: brightness(.3) !important;
+  }
+
+  .answered-accepted .mini-counts {
+    background-color: #4b553c !important;
+    color: #ddd !important;
+  }
+  .answered .mini-counts span {
+    font-weight: bold !important;
+    color: #4b553c !important;
   }
