--- a/src/Stackoverflow_Dark/sections/2/style.css
+++ b/src/Stackoverflow_Dark/sections/2/style.css
@@ -1,7 +1,10 @@
-/* target sites to *NOT* hide the header background */
-  #header, #hmenus {
-    background-color: transparent !important;
-  }
-  #header {
+/* chat.stackoverflow.com */
+  #hlogo a {
     background-image: none !important;
+  }
+  #header-logo, #footer-logo {
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackoverflow-logo.svg) !important;
+  }
+  #header-logo {
+    background-size: contain !important;
   }
