--- a/src/Stackoverflow_Dark/sections/31/style.css
+++ b/src/Stackoverflow_Dark/sections/31/style.css
@@ -1,4 +1,5 @@
-.star-on {
-    -webkit-filter: brightness(.9) !important;
-    filter: brightness(.9) !important;
+#hlogo a {
+    height: 60px !important;
+    background-size: cover !important;
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/superuser-logo.svg) !important;
   }
