--- a/src/Stackoverflow_Dark/sections/40/style.css
+++ b/src/Stackoverflow_Dark/sections/40/style.css
@@ -1,16 +1,5 @@
-#hmenus {
-    border: none !important;
-  }
-  .module {
-    background-image: none !important;
-    border-top-width: 0 !important;
-    border: 1px solid #333 !important;
-    border-width: 1px 0 !important;
-  }
-  /* override !important flag set in site css */
-  a.question-hyperlink {
-    color: #4183C4 !important;
-  }
-  a.question-hyperlink:hover {
-    color: #aaa !important;
+/* darken vote off buttons */
+  .vote-up-off, .vote-down-off, .star-off {
+    -webkit-filter: brightness(.5) !important;
+    filter: brightness(.5) !important;
   }
