--- a/src/Stackoverflow_Dark/sections/8/style.css
+++ b/src/Stackoverflow_Dark/sections/8/style.css
@@ -1,5 +1,6 @@
-/* darken vote off buttons */
-  .vote-up-off, .vote-down-off, .star-off {
-    -webkit-filter: brightness(.5) !important;
-    filter: brightness(.5) !important;
+/* es.stackoverflow.com (Spanish) */
+  .-logo .-img:not(._glyph) {
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/es-stackoverflow-logo.svg) !important;
+    background-size: cover !important;
+    height: 50px !important;
   }
