--- a/src/Stackoverflow_Dark/sections/12/style.css
+++ b/src/Stackoverflow_Dark/sections/12/style.css
@@ -1,7 +1,7 @@
-/* database administrators */
-  #hlogo a {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/database-admin-logo.svg) !important;
+/* target sites to *NOT* hide the header background */
+  #header, #hmenus {
+    background-color: transparent !important;
   }
   #header {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/database-admin-logo-lines.png) !important;
+    background-image: none !important;
   }
