--- a/src/Stackoverflow_Dark/sections/16/style.css
+++ b/src/Stackoverflow_Dark/sections/16/style.css
@@ -1,6 +1,7 @@
-/* es.stackoverflow.com (Spanish) */
-  .-logo .-img:not(._glyph) {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/es-stackoverflow-logo.svg) !important;
-    background-size: cover !important;
-    height: 50px !important;
+#hlogo a {
+    text-indent: -9999px !important;
+  }
+  #footer {
+    background-color: #182030 !important;
+    background-image: url("https://meta.stackexchange.com/content/Sites/stackexchangemeta/img/icon-cloud-footer.png?v=ac80a4525ace") !important;
   }
