--- a/src/Stackoverflow_Dark/sections/17/style.css
+++ b/src/Stackoverflow_Dark/sections/17/style.css
@@ -1,6 +1,6 @@
-/* es.meta.stackoverflow.com (Spanish) */
-  .-logo .-img:not(._glyph) {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/es-meta-stackoverflow-logo.svg) !important;
-    background-size: cover !important;
-    height: 50px !important;
+#custom-content {
+    background-image: none !important;
+  }
+  .vote-count-post {
+    color: #777 !important;
   }
