--- a/src/Stackoverflow_Dark/sections/18/style.css
+++ b/src/Stackoverflow_Dark/sections/18/style.css
@@ -1,29 +1,10 @@
-/* nav manu text coloring only */
-  .nav li, .nav li.youarehere a, .nav a, .nav a:hover,
-  #footer .top-footer-links, #footer #footer-sites, .narrow .votes, .narrow .mini-counts,
-  .answered, .answered-accepted {
-    background-color: transparent !important;
-    color: #ddd !important;
+#hlogo a {
+    text-indent: 0 !important;
   }
-  .nav li.youarehere a, .nav li a:hover {
-    color: #4183C4 !important;
+  .nav ul li {
+    margin-left: 5px !important;
   }
-  .answered-accepted .mini-counts span {
-    color: #fff !important;
-  }
-  .about-page .new-about-content-page h2.about-title {
-    color: #888 !important;
-  }
-  body:before {
-    -webkit-filter: brightness(.3) !important;
-    filter: brightness(.3) !important;
-  }
-
-  .answered-accepted .mini-counts {
-    background-color: #4b553c !important;
-    color: #ddd !important;
-  }
-  .answered .mini-counts span {
-    font-weight: bold !important;
-    color: #4b553c !important;
+  .nav ul li a {
+    padding: 5px 10px !important;
+    margin: 0 !important;
   }
