--- a/src/Stackoverflow_Dark/sections/19/style.css
+++ b/src/Stackoverflow_Dark/sections/19/style.css
@@ -1,6 +1,6 @@
-/* ja.stackoverflow.com (Japanese) */
+/* pt.stackoverflow.com (Portuguese) */
   .-logo .-img:not(._glyph) {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/ja-stackoverflow-logo.svg) !important;
-    background-size: contain !important;
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/pt-stackoverflow-logo.svg) !important;
+    background-size: cover !important;
     height: 60px !important;
   }
