--- a/src/Stackoverflow_Dark/sections/24/style.css
+++ b/src/Stackoverflow_Dark/sections/24/style.css
@@ -1,6 +1,6 @@
-#custom-content {
-    background-image: none !important;
-  }
-  .vote-count-post {
-    color: #777 !important;
+/* meta.ru.stackoverflow.com (Russian) */
+  .-logo .-img:not(._glyph) {
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/ru-meta-stackoverflow-logo.svg) !important;
+    background-size: contain !important;
+    height: 60px !important;
   }
