--- a/src/Stackoverflow_Dark/sections/25/style.css
+++ b/src/Stackoverflow_Dark/sections/25/style.css
@@ -1,10 +1,4 @@
-#hlogo a {
-    text-indent: 0 !important;
-  }
-  .nav ul li {
-    margin-left: 5px !important;
-  }
-  .nav ul li a {
-    padding: 5px 10px !important;
-    margin: 0 !important;
+.star-on {
+    -webkit-filter: brightness(.9) !important;
+    filter: brightness(.9) !important;
   }
