--- a/src/Stackoverflow_Dark/sections/30/style.css
+++ b/src/Stackoverflow_Dark/sections/30/style.css
@@ -1,6 +1,6 @@
-/* meta.ru.stackoverflow.com (Russian) */
-  .-logo .-img:not(._glyph) {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/ru-meta-stackoverflow-logo.svg) !important;
-    background-size: contain !important;
+/* stackExchange.com */
+  header h1 {
     height: 60px !important;
+    background-size: cover !important;
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackexchange-logo.svg) !important;
   }
