--- a/src/Stackoverflow_Dark/sections/33/style.css
+++ b/src/Stackoverflow_Dark/sections/33/style.css
@@ -1,14 +1,24 @@
-#hlogo a {
-    height: 60px !important;
-    background-size: contain !important;
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/skeptics-logo.svg) !important;
+.container {
+    position: relative !important;
   }
-  #hmenus .nav li a {
-    border: none !important;
-    margin-top: 40px !important;
+  .container:after {
+    content: " ";
+    background: url(https://cdn.sstatic.net/Sites/travel/img/bg-map.png?v=78dabedcf17b) no-repeat center -34px !important;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: 0 !important;
+    opacity: .1 !important;
+    pointer-events: none !important;
   }
-  #hmenus .nav ul li:before {
-    mix-blend-mode: initial !important;
-    color: #999 !important;
-    left: 3px !important;
+  .nav li, .nav a, .narrow .status, #content {
+    background: transparent !important;
+  }
+  .nav a:hover, .nav li.youarehere a {
+    background: rgba(0, 0, 0, .3) !important;
+  }
+  .answered-accepted .mini-counts {
+    background-color: #4183C4  !important;
   }
