--- a/src/Stackoverflow_Dark/sections/35/style.css
+++ b/src/Stackoverflow_Dark/sections/35/style.css
@@ -1,5 +1,16 @@
-/* stackapps.com */
-  #hlogo a {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackapps-logo.png) !important;
-    background-size: contain !important;
+#hmenus {
+    border: none !important;
+  }
+  .module {
+    background-image: none !important;
+    border-top-width: 0 !important;
+    border: 1px solid #333 !important;
+    border-width: 1px 0 !important;
+  }
+  /* override !important flag set in site css */
+  a.question-hyperlink {
+    color: #4183C4 !important;
+  }
+  a.question-hyperlink:hover {
+    color: #aaa !important;
   }
