--- a/src/Stackoverflow_Dark/sections/38/style.css
+++ b/src/Stackoverflow_Dark/sections/38/style.css
@@ -1,5 +1,5 @@
-#hlogo a {
-    height: 60px !important;
-    background-size: contain !important;
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/meta-superuser-logo.svg) !important;
+/* nav manu text coloring only */
+  .nav li.youarehere a, .nav li a:hover {
+    background-color: transparent !important;
+    color: #4183C4 !important;
   }
