--- a/src/Stackoverflow_Dark/sections/9/style.css
+++ b/src/Stackoverflow_Dark/sections/9/style.css
@@ -1,9 +1,6 @@
-#hlogo a {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackoverflow-logo.svg) !important;
-  }
+/* es.meta.stackoverflow.com (Spanish) */
   .-logo .-img:not(._glyph) {
-    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/stackoverflow-logo.svg) !important;
+    background-image: url(https://StylishThemes.github.io/StackOverflow-Dark/images/es-meta-stackoverflow-logo.svg) !important;
     background-size: cover !important;
-    background-position: 0 0  !important;
-    background-repeat: no-repeat !important;
+    height: 50px !important;
   }
